--- a/train/test.ipynb
+++ b/train/test.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mpablito\u001b[0m (\u001b[33msufers\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from Brain_DDQN import Brain\n",
@@ -21,23 +30,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20000\n"
+      "2000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20000 [00:00<?, ?it/s]/Users/paolo/Documents/GitHub/Briscola-Game/Boh/Brain_DDQN.py:267: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  return F.softmax(self.layer4(x))\n",
-      "100%|██████████| 20000/20000 [50:54<00:00,  6.55it/s]  \n"
+      "  0%|          | 0/2000 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'config' has no attribute 'eps_threshold'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/paolo/Documents/GitHub/Briscola-Game/train/test.ipynb Cella 3\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/paolo/Documents/GitHub/Briscola-Game/train/test.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m brain \u001b[39m=\u001b[39m Brain(\u001b[39m162\u001b[39m, \u001b[39m40\u001b[39m, \u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/paolo/Documents/GitHub/Briscola-Game/train/test.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m wins, loss \u001b[39m=\u001b[39m brain\u001b[39m.\u001b[39;49mtrain()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/paolo/Documents/GitHub/Briscola-Game/train/test.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mI\u001b[39m\u001b[39m'\u001b[39m\u001b[39mm reinforcing myself🏋️, give me a moment...⌛\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Documents/GitHub/Briscola-Game/train/Brain_DDQN.py:190\u001b[0m, in \u001b[0;36mBrain.train\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    186\u001b[0m state \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mtensor(state, dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mfloat64, \n\u001b[1;32m    187\u001b[0m                     device\u001b[39m=\u001b[39mdevice)\u001b[39m.\u001b[39munsqueeze(\u001b[39m0\u001b[39m)\n\u001b[1;32m    188\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m20\u001b[39m):\n\u001b[1;32m    189\u001b[0m     \u001b[39m# Let the agent choose the action\u001b[39;00m\n\u001b[0;32m--> 190\u001b[0m     action \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mget_action_train(state, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mplayer_1, \u001b[39mself\u001b[39;49m)\n\u001b[1;32m    191\u001b[0m         \u001b[39m#tensor_actions = torch.zeros(40, dtype=torch.int64)\u001b[39;00m\n\u001b[1;32m    192\u001b[0m         \u001b[39m#tensor_actions[action.id] = 1\u001b[39;00m\n\u001b[1;32m    193\u001b[0m     tensor_actions \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mfull((\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m), action\u001b[39m.\u001b[39mid, device \u001b[39m=\u001b[39m device,\n\u001b[1;32m    194\u001b[0m                                 dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mint64)\n",
+      "File \u001b[0;32m~/Documents/GitHub/Briscola-Game/train/Train.py:243\u001b[0m, in \u001b[0;36mGameTrain.get_action_train\u001b[0;34m(self, state, player, brain)\u001b[0m\n\u001b[1;32m    241\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgreedy_action(player, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcard_on_table)\n\u001b[1;32m    242\u001b[0m \u001b[39melse\u001b[39;00m: \n\u001b[0;32m--> 243\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mQ_action(state, player, brain, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcard_on_table)\n",
+      "File \u001b[0;32m~/Documents/GitHub/Briscola-Game/train/Train.py:259\u001b[0m, in \u001b[0;36mGameTrain.Q_action\u001b[0;34m(self, state, player, brain, card_on_table)\u001b[0m\n\u001b[1;32m    256\u001b[0m \u001b[39m# Find the new threshold that changes with the number of steps\u001b[39;00m\n\u001b[1;32m    257\u001b[0m eps_threshold \u001b[39m=\u001b[39m EPS_END \u001b[39m+\u001b[39m (EPS_START \u001b[39m-\u001b[39m EPS_END) \u001b[39m*\u001b[39m \\\n\u001b[1;32m    258\u001b[0m                 math\u001b[39m.\u001b[39mexp(\u001b[39m-\u001b[39m\u001b[39m1.\u001b[39m \u001b[39m*\u001b[39m steps_done \u001b[39m/\u001b[39m EPS_DECAY)\n\u001b[0;32m--> 259\u001b[0m eps \u001b[39m=\u001b[39m config\u001b[39m.\u001b[39;49meps_threshold\n\u001b[1;32m    260\u001b[0m steps_done \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    263\u001b[0m \u001b[39m# Under the threshold we just use the random policy \u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'config' has no attribute 'eps_threshold'"
      ]
     }
    ],
@@ -165,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
